# nv-rms-client

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
proto/: rack_manager.proto  rack_manager_scaleupfabric_domain_telemetry.proto
rms-rpc/: Cargo.toml  build.rs
rms-rpc/proto/: rack_manager.proto
rms-rpc/src/: lib.rs
rms-rpc/src/protos/: mod.rs
src/: client.rs  client_config.rs  lib.rs
src/protos/: mod.rs
tonic-client-wrapper/: Cargo.toml
tonic-client-wrapper/src/: codegen.rs  lib.rs  utils.rs
tonic-client-wrapper/src/test_fixtures/: test.proto
