[workspace]
resolver = "3"
members = [ "tonic-client-wrapper", "rms-rpc" ]

[workspace.package]
description = "NVIDIA Rack Manager Service client"
authors = [ "NVIDIA Engineering <dcss-forge-rms@exchange.nvidia.com>" ]
repository = "https://github.com/NVIDIA/nv-rms-client.git"
license = "Apache-2.0"
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.14", features = ["tls-ring"] }

hyper = { version = "^1" }
hyper-rustls = { version = "^0.27" }
hyper-timeout = { version = "^0.5" }
hyper-util = { version = "^0.1" }

rustls = { version = "0.23.16" }

async-trait = "0.1.88"
chrono = "0.4"
eyre = "0.6.12"
heck = "0.5.0"
lazy_static = "1.5.0"
prettyplease = "0.2.30"
proc-macro2 = { default-features = false, version = "1.0.92" }
prost = "0.14.1"
prost-types = "0.14.1"
quote = { default-features = false, version = "1.0" }
rustls-pemfile = "2.2.0"
serde = "1"
syn = { default-features = false, version = "2.0" }
temp-dir = "0.1.14"
thiserror = "2.0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tracing = "0.1.41"
tryhard = "0.5.1"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
unused_async = "warn"