[package]
name = "tonic-client-wrapper"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = [ "NVIDIA Engineering <dcss-forge-rms@exchange.nvidia.com>" ]

[features]
default = ["codegen"]
codegen = [
  "dep:proc-macro2",
  "dep:tonic-prost-build",
  "dep:quote",
  "dep:syn",
  "dep:prettyplease",
  "dep:heck",
  "dep:prost-types",
  "dep:lazy_static",
]

[dependencies]
thiserror = "2.0.14"
tonic = { version = "0.14", features = ["tls-ring"] }
async-trait = "0.1.88"
proc-macro2 = { optional = true, default-features = false, version = "1.0.92" }
tonic-prost-build = { optional = true, version = "0.14" }
quote = { optional = true, default-features = false, version = "1.0" }
syn = { optional = true, default-features = false, version = "2.0" }
prettyplease = { optional = true, version = "0.2.30" }
heck = { optional = true, version = "0.5.0" }
prost-types = { optional = true, version = "0.14.1" }
lazy_static = { optional = true, version = "1.5.0" }

[dev-dependencies]
temp-dir = { version = "0.2.0" }